tests/samples/negative/functions/method_receiver_mutability.ax
module method_receiver_mutability;

struct Counter {
    value: i32;
}

impl Counter {
    fn add(self: *mut Counter, delta: i32) -> i32 {
        self.value = self.value + delta;
        return self.value;
    }
}

fn main() -> i32 {
    let counter = Counter { value: 1 };
    return counter.add(1);
}
